--- a/literature_research/literature_annotation.ipynb
+++ b/literature_research/literature_annotation.ipynb
@@ -2677,9 +2677,9 @@
     "\n",
     "\n",
     "# Add references with functions\n",
-    "CetinOzturk.Title = \"Agriculture and Food Problems and Solutions: Challenges and Capacity of the Capitalist System in the Twenty-First Century\"\n",
-    ".Citation = \"Çetin, M., Öztürk, M. (2023). Agriculture and Food Problems and Solutions: Challenges and Capacity of the Capitalist System in the Twenty-First Century. In: Ari, A. (eds) Capitalism at a Crossroads. Springer Studies in Alternative Economics. Springer, Cham. https://doi.org/10.1007/978-3-031-23257-2_4\"\n",
-    ".In_Text_Citation = \"Çetin & Öztürk, 2023\"\n",
+    "CetinOzturk2023.Title = \"Agriculture and Food Problems and Solutions: Challenges and Capacity of the Capitalist System in the Twenty-First Century\"\n",
+    "CetinOzturk2023.Citation = \"Çetin, M., Öztürk, M. (2023). Agriculture and Food Problems and Solutions: Challenges and Capacity of the Capitalist System in the Twenty-First Century. In: Ari, A. (eds) Capitalism at a Crossroads. Springer Studies in Alternative Economics. Springer, Cham. https://doi.org/10.1007/978-3-031-23257-2_4\"\n",
+    "CetinOzturk2023.In_Text_Citation = \"Çetin & Öztürk, 2023\"\n",
     "\n",
     "# Combine all annotations with their chosen categories\n",
     "CetinOzturk2023_annot = {\"First, they use natural sources converted into food, foodstuffs, and other products. Thus, agro-food economies have established a reciprocal bond with nature and society::p.59\": [Agroecology, Rural_Family],\n",
